--- a/config/emacs/nix-vanilla/config.org
+++ b/config/emacs/nix-vanilla/config.org
@@ -404,7 +404,7 @@
     (corfu-quit-at-boundary nil)     ;; Never quit at completion boundary
     (corfu-quit-no-match nil)        ;; Never quit, even if there is no match
     (corfu-preview-current nil)      ;; Disable current candidate preview
-    (corfu-preselect 'first)         ;; Preselect the first candidate
+    (corfu-preselect 'prompt)         ;; Preselect the first candidate
     (corfu-on-exact-match nil)       ;; Configure handling of exact matches
     (corfu-scroll-margin 5)          ;; Use scroll margin
     :bind
@@ -513,8 +513,7 @@
       (setq-local completion-ignore-case t))
 
     ;; Apply completion setup in LSP buffers
-    (add-hook 'lsp-mode-hook #'my/lsp-mode-setup-completion)
-
+    (add-hook 'lsp-mode-hook #'my/lsp-mode-setup-completion))
 
   (use-package lsp-ui
     :hook (lsp-mode . lsp-ui-mode)
